[package]
name = "method_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "method_server"
path = "main.rs"

[dependencies]
anyhow = "1.0.95"
deadpool-postgres = "0.14.1"
env_logger = "0.11.6"
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.25"
openssl = "0.10.69"
postgres-openssl = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.12"
